--- a/index.html
+++ b/index.html
@@ -1,51 +1,135 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>YouBike 臺北市公共自行車即時資訊</title>
+<html lang="en">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>練習 13： YouBike 臺北市公共自行車即時資訊</title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <style>
-    body{ padding: 1em;  }
+    body {
+      padding: 1em;
+    }
+    .sortBtn {
+      cursor: pointer;
+    }
   </style>
 
-</head>
-<body>
+  <script src="https://unpkg.com/vue@next"></script>
 
-  <h1>YouBike 臺北市公共自行車即時資訊</h1>
+</head>
+
+<body>
+  <p>
+    練習 13： YouBike 臺北市公共自行車即時資訊 <br>
+    完成下列表格，並加入:
+    1. 站點名稱搜尋
+    2. 目前可用車輛 / 總停車格 的排序功能
+  </p>
+
+  <hr>
 
   <div id="app">
 
+    <p>
+      站點名稱搜尋: <input type="text" v-model="searchInput" @click="sortType()">
+    </p>
     <table class="table table-striped">
       <thead>
         <tr>
           <th>#</th>
           <th>場站名稱</th>
           <th>場站區域</th>
-          <th>目前可用車輛</th>
-          <th>總停車格</th>
+          <th class="sortBtn" @click="sortType('sbi')">目前可用車輛
+            <i class="fa fa-sort-asc" aria-hidden="true"></i>
+            <i class="fa fa-sort-desc" aria-hidden="true"></i>
+          </th>
+          <th class="sortBtn" @click="sortType('tot')">總停車格
+            <i class="fa fa-sort-asc" aria-hidden="true"></i>
+            <i class="fa fa-sort-desc" aria-hidden="true"></i>
+          </th>
           <th>資料更新時間</th>
         </tr>
       </thead>
       <tbody>
-        <tr v-for="s in ubikeStops">
-          <td>{{ s.sno }}</td>
-          <td>{{ s.sna }}</td>
-          <td>{{ s.sarea }}</td>
-          <td>{{ s.sbi }}</td>
-          <td>{{ s.tot }}</td>
-          <td>{{ timeFormat(s.mday) }}</td>
+        <!-- 請補完 -->
+        <tr v-for="(stop,idx) in sortTable">
+          <td>{{stop.sno}}</td>
+          <td>{{stop.sna}}</td>
+          <td>{{stop.sarea}}</td>
+          <td>{{stop.sbi}}</td>
+          <td>{{stop.tot}}</td>
+          <td>{{stop.mday}}</td>
         </tr>
       </tbody>
-
     </table>
-
+    
   </div>
 
-  <script src="https://unpkg.com/vue@next"></script>
-  <script src="./scripts.js?v=2020081401"></script>
+
+  <script>
+
+    // 欄位說明請參照:
+    // http://data.taipei/opendata/datalist/datasetMeta?oid=8ef1626a-892a-4218-8344-f7ac46e1aa48
+    // 半成品參考: https://kuro.tw/vue-ubike-information/
+
+    // sno：站點代號、 sna：場站名稱(中文)、 tot：場站總停車格、
+    // sbi：場站目前車輛數量、 sarea：場站區域(中文)、 mday：資料更新時間、
+    // lat：緯度、 lng：經度、 ar：地(中文)、 sareaen：場站區域(英文)、
+    // snaen：場站名稱(英文)、 aren：地址(英文)、 bemp：空位數量、 act：全站禁用狀態
+
+    const app = Vue.createApp({
+      data () {
+        return {
+          uBikeStops: [],
+          searchInput:'',
+          sortStatus:'',
+          sortItem:'',
+        }
+      },
+      created () {
+        fetch('https://tcgbusfs.blob.core.windows.net/blobyoubike/YouBikeTP.gz')
+            .then(res => res.json())
+            .then(json => {
+              const stops = Object.keys(json.retVal).map(key => json.retVal[key]);
+              this.uBikeStops = stops;
+            });
+      },
+      computed:{
+        sortTable(){
+          if(!this.sortItem){
+            return this.uBikeStops.filter(u => u.sna.indexOf(this.searchInput) > -1);
+            // return [...this.uBikeStops].filter(u => u.sna.indexOf(this.searchInput) > -1);
+          }
+          return ((item)=>{
+            if(item.match('R')){
+              item = item.split('R')[0];
+              // return this.uBikeStops.sort((a,b) => a[item] - b[item]);
+              return [...this.uBikeStops].sort(({[item]:a},{[item]:b}) => a - b);
+            }else if(!item.match('R')){
+              // return this.uBikeStops.sort((a,b) => b[item] - a[item]);
+              return [...this.uBikeStops].sort(({[item]:a},{[item]:b}) => b - a);
+            }else{
+              console.log('asdf')
+            }
+          })(this.sortItem);
+        }
+      },
+      methods:{
+        sortType(item){
+          this.sortItem === item ?
+          this.sortItem = `${item}R` :
+          this.sortItem = item
+        },
+      }
+    }).mount('#app');
+  </script>
 
 </body>
+
 </html>
